--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select-country-list": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^5.1.0",
     "web-vitals": "^2.1.4"
