--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -24,6 +26,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/dotenv": "^8.2.0"
+    "@types/dotenv": "^8.2.0",
+    "@types/pg": "^8.11.8"
   }
 }
