--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
+    "openai": "^4.60.0",
     "pg": "^8.12.0",
     "uuid": "^10.0.0"
   },
